--- a/Week5/Day5/EXP/index.html
+++ b/Week5/Day5/EXP/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>Mini project</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
-    <div class="heroCard"></div>
+    <div class="heroCard">
+      <i></i>
+      <!-- <i class="fas fa-spinner fa-spin fa-8x" id="spinner"></i> -->
+    </div>
     <button>Find Someone</button>
     <script src="script.js"></script>
   </body>
