converter with logic and style

--- a/Week5/Day5/DC/index.html
+++ b/Week5/Day5/DC/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DC</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <form action="index.html" method="GET" id="froForm">
-      <label for="from">From</label>
+      <label for="from" class="labFro">From:</label>
       <select name="from" id="from"></select>
     </form>
     <form action="index.html" method="GET" id="toForm">
-      <label for="to">To</label>
+      <label for="to" class="labTo">To:</label>
       <select name="to" id="to"></select>
     </form>
     <form action="index.html" method="GET" id="convert">
-      <label for="amount">Amount</label>
+      <label for="amount" class="labAmount">Amount:</label>
       <input type="text" name="username" id="amount" />
       <input type="submit" value="Convert" />
     </form>
