todo mini project

--- a/Week6/Day5/ExerciseXP/tasks.html
+++ b/Week6/Day5/ExerciseXP/tasks.html
@@ -13,6 +13,18 @@
   </head>
   <body>
     <a href="index.html">BACK TO TODO LIST</a>
+    <form action="tasks.html" id="todo">
+      <label for="user"> TITLE </label>
+      <input type="text" name="username" id="user" />
+      <label for="description"> DESCRIPTION</label>
+      <input type="text" name="description" id="description" />
+      <label for="startDate"> START DATE AND TIME</label>
+      <input type="date" name="startDate" id="startDate" />
+      <label for="endDate"> END DATE AND TIME</label>
+      <input type="date" name="endDate" id="endDate" />
+      <input type="submit" />
+    </form>
+    <div class="container"></div>
     <script src="tasks.js"></script>
   </body>
 </html>
